minor edit + buger still not showing

--- a/style.css
+++ b/style.css
@@ -363,32 +363,32 @@ justify-content: center;
 .img-1{
   position: absolute;  
     left: 11%;
-    top: 409%;
+    top: 415%;
 }
 .img-2{
   position: absolute;  
   left: 39%;
-  top: 409%;
+  top: 415%;
 }
 .img-3{
   position: absolute;  
     left: 68%;
-    top: 409%;
+    top: 415%;
 }
 .img-4{
   position: absolute;  
   left: 11%;
-  top: 455%;
+  top: 460%;
 }
 .img-5{
   position: absolute;  
     left: 40%;
-    top: 455%; 
+    top: 460%; 
 }
 .img-6{
   position: absolute;  
   left: 68.5%;
-  top: 455%;
+  top: 460%;
 }
  
 /* media query */
@@ -534,27 +534,27 @@ input{
  }
  .img-1{ 
   left: 22%;
-  top: 733%;   
+  top: 739%;   
  } 
  .img-2{ 
   left: 22%;
-  top: 780%;   
+  top: 787%;   
  } 
  .img-3{ 
   left: 22%;
-  top: 830%;   
+  top: 836%;   
  } 
  .img-4{ 
   left: 22%;
-  top: 875%;   
+  top: 881%;   
  } 
  .img-5{ 
   left: 22%;
-  top: 922%;   
+  top: 928%;   
  } 
  .img-6{ 
   left: 22%;
-  top: 972%;   
+  top: 978%;   
  } 
 
 }
